--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,33 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
-serde = "1"
-serde_json = "1"
+actix-web = {version = "3.3.3", features = ["openssl"] }
 
-rand = "0.8.4"
+argon2 = "0.3.4"
+
+chrono = { version="0.4.19", features = ["serde"] }
+
+dotenv = "0.15.0"
+
+diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07"] }
+diesel_migrations = "1.4.0"
+
+jsonwebtoken = "8.0.1"
+
+lazy_static = "1.4.0"
+
+mongodb = "2.1.0"
+
+openssl = { version = "0.10", features = ["v110"] }
+
+uuid = { version = "0.8.2", features = ["serde", "v4"] }
+
+rand = "0.8.5"
+rand_core = { version = "0.6", features = ["std"] }
+
+regex = "1.5.4"
+
+serde = "1.0.136"
+serde_json = "1.0.79"
+
+thiserror = "1.0.24"
