--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = {version = "3.3.3", features = ["openssl"] }
+actix-web-httpauth = "0.5.1"
 
 argon2 = "0.3.4"
 
